Fri Dec  8 16:30:48 1995  Tom Tromey  <tromey@cambric.colorado.edu>

	* depend.am (DEP_FILES): Handle deANSIfication case.  From Jim
	Meyering.

	* Makefile.am (pkgdata_DATA): Added new files.
	* data-clean.am: New file.
	* scripts-clean.am: New file.
	* libraries-clean.am: New file.
	* programs-clean.am: New file.

Wed Dec  6 00:06:11 1995  Tom Tromey  <tromey@cambric.colorado.edu>

	* automake.in (am_install_var): Error if variable name
	"misspelled".
	(handle_source_transform): Automatically include .c file
	corresponding to .y or .l.

Tue Dec  5 00:46:14 1995  Tom Tromey  <tromey@cambric.colorado.edu>

	* programs.am: Changed for uniform naming scheme.

	* automake.in (read_am_file): Allow '-' and '.' in target names.
	(generate_makefile): Don't pass arguments to handle_libraries.
	(initialize_per_input): Define @sources, @objects.
	(generate_makefile): Init @sources, @objects if needed.
	(handle_source_transform): Push onto @sources, @objects here.
	(am_install_var): Push primary onto @all, for configure-time
	customization.
	(handle_programs): Use new uniform naming scheme.

	* Makefile.am (check-local): New target.

	* automake.in (handle_libraries): Use uniform naming scheme.

	* libraries.am: Rewrote for uniform naming scheme.

	* scripts.am: Updated names of all clean targets.

	* automake.in (handle_programs): Split on all whitespace.
	(handle_libraries): Ditto.
	(handle_texinfo): Ditto.
	(handle_man_pages): Ditto.
	(am_install_var): Changed return result.
	(am_install_var): Changed interface.
	(am_install_var): Push onto @clean@ if requested.
	(handle_scripts): Pass -clean to am_install_var.

Mon Dec  4 11:55:36 1995  Tom Tromey  <tromey@cambric.colorado.edu>

	* automake.in (am_install_var): Push target onto @all.
	(get_object_extension): Use $(...).
	(handle_source_transform): Ditto.
	(handle_programs): Ditto.

	* automake.in (require_argument): New function.
	(parse_arguments): Use it.
	(push_dist_common): New function.
	(generate_makefile): Use it.