@@ -3,6 +3,9 @@ Fri Dec  8 16:30:48 1995  Tom Tromey  <tromey@cambric.colorado.edu>
 	* depend.am (DEP_FILES): Handle deANSIfication case.  From Jim
 	Meyering.
 
+
+	* automake.in (am_install_var): Changed how 'clean' handled for
+	uniform name targets.
 	* Makefile.am (pkgdata_DATA): Added new files.
 	* data-clean.am: New file.
 	* scripts-clean.am: New file.
